# hello-glfw3-glad

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  workspace.code-workspace
cmake/: buildType.cmake  glfw.cmake  opengl.cmake  options.cmake  platform.cmake
res/win/: win_res.rc
src/private/: main.cpp
src/private/engine/core/ecs/systems/: System.cpp
src/private/engine/core/graphics/: GraphicsManager.cpp
src/private/engine/core/utils/metrics/: DefaultLogger.cpp  Log.cpp
src/private/engine/windows/graphics/: WinGraphics.cpp
src/public/engine/cfg/: memory.hpp  mutex.hpp
src/public/engine/core/ecs/systems/: ISystem.hxx  System.hpp
src/public/engine/core/graphics/: GraphicsManager.hpp  IGraphicsManager.hxx
src/public/engine/core/utils/metrics/: DefaultLogger.hpp  ILogger.hxx  Log.hpp
src/public/engine/windows/graphics/: WinGraphics.hpp
